--- a/PrubaGDC_Rene/View/Base.lproj/Main.storyboard
+++ b/PrubaGDC_Rene/View/Base.lproj/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="evz-WX-D5l">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -172,8 +172,8 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="XIZ-bE-UOE" id="gxX-oY-WhI"/>
-                                    <outlet property="delegate" destination="XIZ-bE-UOE" id="7cL-w9-O5k"/>
+                                    <outlet property="dataSource" destination="XIZ-bE-UOE" id="T8X-qt-EPI"/>
+                                    <outlet property="delegate" destination="XIZ-bE-UOE" id="yDu-bk-9T3"/>
                                 </connections>
                             </tableView>
                         </subviews>
